test/tests/VoidExpression.expected
VoidExpression.panda:8:21: error: method anonymous.BareCode.foo() does not return a value
VoidExpression.panda:12:12: error: method anonymous.BareCode.foo() does not return a value
VoidExpression.panda:17:13: error: method anonymous.BareCode.bar(i:panda.core.Int64) does not return a value
3 errors
